Fixed spacing between elements

--- a/lesson05/css/large.css
+++ b/lesson05/css/large.css
@@ -8,8 +8,9 @@
     }
 
     .logo-box {
-        padding-left: 100px;
-        padding-bottom: 20px;
+        padding-left: 7em;
+        padding-bottom: .5em;
+        max-width: 800px;
     }
 
     #navigation {
