--- a/lesson05/css/medium.css
+++ b/lesson05/css/medium.css
@@ -85,7 +85,6 @@
     }
 
     .pancakes p {
-        padding-left: 50px;
         grid-column: 2/3;
     }
 
@@ -101,6 +100,7 @@
         display: grid;
         grid-template-columns: repeat(5, auto);
         padding-bottom: 15px;
+        margin-bottom: 5em;
     }
 
     .forecast div {
